<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView

        android:id="@+id/popUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:text="@string/ajouter_une_ville" />

    <TextView
        android:id="@+id/popUpDecription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="5sp"
        android:text="@string/veuillez_saisir_le_nom_de_ville"
        android:textColor="#8f8f8f"
        android:textSize="13sp" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cityNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="15dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cityNameErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/city_name_error"
        android:visibility="gone"
        android:layout_margin="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="end">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@android:color/holo_red_dark"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>