<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authentification_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.mobileprojectapplication.ui.authentification.LoginFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_nav_login_to_nav_reset_password"
            app:destination="@id/nav_reset_password" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.mobileprojectapplication.ui.authentification.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_nav_register_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_reset_password"
        android:name="com.example.mobileprojectapplication.ui.authentification.ResetPasswordFragment"
        android:label="@string/menu_reset_password"
        tools:layout="@layout/fragment_reset_password" >
        <action
            android:id="@+id/action_nav_reset_password_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
</navigation>